--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <script>
         const canvasEl = document.querySelector("canvas")
         const canvasCtx = canvasEl.getContext("2d")
-
+        const lineWidth = 15
+        
+        
         function setup(){
             canvasEl.width = window.innerWidth
             canvasCtx.whidth = window.innerWidth
@@ -22,8 +24,37 @@
 
         }
         function draw() {
+            //desenhando o campo
             canvasCtx.fillStyle = "#286047"
-            canvasCtx.fillRect(0, 0, window.innerWidth, window.innerHeight)
+            canvasCtx.fillRect(0, 0, window .innerWidth, window.innerHeight)
+            //desenhando linha central
+            canvasCtx.fillStyle ="#ffffff"
+
+            const x = window.innerWidth / 2 -lineWidth /2
+            const y = 0
+            const w = lineWidth
+            const h = window.innerHeight
+            canvasCtx.fillRect(x, y, w, h)
+
+            //desenhando as raquetes (esquerda)
+            canvasCtx.fillRect(10, 100, lineWidth, 200)
+            //desenhado as raquetes (direita)
+            canvasCtx.fillRect(window.innerWidth -lineWidth - 10, 200, lineWidth, 200)
+
+            //desenhando a bola
+            canvasCtx.beginPath()
+            canvasCtx.arc(200, 300, 20, 0, 2 * Math.PI, false)
+            canvasCtx.fill()
+
+            //desenhando o placar (esquerdo)
+            canvasCtx.font = "bold 72px Arial"
+            canvasCtx.textAlign = "center"
+            canvasCtx.textBaseline = "top"
+            canvasCtx.fillStyle = "#01341D"
+            canvasCtx.fillText("3", window.innerWidth / 4, 50)
+            //desenhando o placar (direito)
+            canvasCtx.fillText("4", window.innerWidth / 4 + window.innerWidth / 2, 50)
+
         }
 
         setup();
